# pyflwdir

./: Cargo.toml
comparison/flwdir/: BENCHMARK_REPORT.md  Cargo.toml  benchmark_comparison.py  compare_outputs.py  explore_python_api.py  python_results.json  run_comparison.py  rust_results.json  save_results.py  test_python.py  visualize_results.py
comparison/flwdir/src/: main.rs
comparison/flwdir/visualizations/: index.html
pyflwdir-rs/: Cargo.toml
pyflwdir-rs/src/: core.rs  core_d8.rs  flwdir.rs  lib.rs
visualizations/: index.html
